--- a/OpenCL/Solutions/Makefile
+++ b/OpenCL/Solutions/Makefile
@@ -7,7 +7,7 @@
 # verify that you are including the right make.def file for the platform
 include ../make.def
 
-EXES     = mm_testbed$(EXE) jac_solv_ocl_basic$(EXE) jac_solv_ocl_colmaj$(EXE) jac_solv_ocl_colmaj_nobr$(EXE) jac_solv_ocl_colmaj_nobr_wg$(EXE) jac_solv_ocl_best$(EXE) vadd$(EXE)
+EXES     = mm_testbed$(EXE) jac_solv_ocl_basic$(EXE) jac_solv_ocl_colmaj$(EXE) jac_solv_ocl_colmaj_nobr$(EXE) jac_solv_ocl_colmaj_nobr_wg$(EXE) jac_solv_ocl_best$(EXE)
 
 MM_OBJS  = mm_testbed.$(OBJ) mm_utils.$(OBJ) mm_ijk.$(OBJ) mm_tst_cases.$(OBJ)
 
@@ -21,7 +21,6 @@ JAC_OCL_COLMAJ_NOBR_WG_OBJS  = jac_solv_ocl_colmaj_nobr_wg.$(OBJ) mm_utils.$(OBJ
 
 JAC_OCL_BEST_OBJS  = jac_solv_ocl_best.$(OBJ) mm_utils.$(OBJ) ocl_utils.$(OBJ)
 
-VADD_OCL_OBJS  = vadd.$(OBJ) ocl_utils.$(OBJ)
 
 all: $(EXES)
 
@@ -43,9 +42,6 @@ jac_solv_ocl_best$(EXE): $(JAC_OCL_BEST_OBJS) mm_utils.h
 mm_testbed$(EXE): $(MM_OBJS) mm_utils.h
 	$(CLINKER) $(CFLAGS) -o mm_testbed$(EXE) $(MM_OBJS) $(LIBS)
 
-vadd$(EXE): $(VADD_OCL_OBJS)
-	$(CLINKER) $(CFLAGS) -o vadd$(EXE) $(VADD_OCL_OBJS) $(LIBS) $(OCL_LIBS)
-
 test: $(EXES)
 	for i in $(EXES); do \
             $(PRE)$$i; \
@@ -63,7 +59,6 @@ jac_solv_ocl_colmaj.$(OBJ): mm_utils.h ocl_utils.h
 jac_solv_ocl_colmaj_nobr.$(OBJ): mm_utils.h ocl_utils.h
 jac_solv_ocl_colmaj_nobr_wg.$(OBJ): mm_utils.h ocl_utils.h
 jac_solv_ocl_best.$(OBJ): mm_utils.h ocl_utils.h
-vadd.$(OBJ): ocl_utils.h
 ocl_utils.$(OBJ): ocl_utils.h
 
 
