Add deviceinfo code to OpenCL exercises

--- a/OpenCL/Makefile
+++ b/OpenCL/Makefile
@@ -7,7 +7,7 @@
 # verify that you are including the right make.def file for the platform
 include make.def
 
-EXES     = mm_testbed$(EXE) jac_solv$(EXE) jac_solv_ocl$(EXE) vadd$(EXE)
+EXES     = mm_testbed$(EXE) jac_solv$(EXE) jac_solv_ocl$(EXE) vadd$(EXE) deviceinfo$(EXE)
 
 MM_OBJS  = mm_testbed.$(OBJ) mm_utils.$(OBJ) mm_ijk.$(OBJ) mm_tst_cases.$(OBJ)
 
@@ -17,6 +17,8 @@ JAC_OBJS  = jac_solv.$(OBJ) mm_utils.$(OBJ)
 JAC_OCL_OBJS  = jac_solv_ocl.$(OBJ) mm_utils.$(OBJ) ocl_utils.$(OBJ)
 
 VADD_OCL_OBJS  = vadd.$(OBJ) ocl_utils.$(OBJ)
+
+DEVICE_OBJS	= deviceinfo.$(OBJ) ocl_utils.$(OBJ)
 
 all: $(EXES)
 
@@ -31,6 +33,9 @@ vadd$(EXE): $(VADD_OCL_OBJS)
 
 jac_solv_ocl$(EXE): $(JAC_OCL_OBJS)
 	$(CLINKER) $(CFLAGS) -o jac_solv_ocl$(EXE) $(JAC_OCL_OBJS) $(LIBS) $(OCL_LIBS)
+
+deviceinfo$(EXE): $(DEVICE_OBJS)
+	$(CLINKER) $(CFLAGS) -o deviceinfo$(EXE) $(DEVICE_OBJS) $(LIBS) $(OCL_LIBS)
 
 test: $(EXES)
 	for i in $(EXES); do \
